[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SaveAndLoadView"
version = "2025.0"
description = "Resets the camera to the default perspective view used in OVITO"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ovito >= 3.12.0",
]

[project.urls]
repository = "https://github.com/nnn911/ResetViewportView"

[project.entry-points.'OVITO.Utility']
"Save & Load View" = "SaveAndLoadView:SaveAndLoadView"

[tool.setuptools.packages.find]
where = ["src"]
